# RocketSchema

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  netlify.toml  next.config.mjs  package-lock.json  package.json  test-validator.js  validate-schemas.js
.github/workflows/: tag.yml
data/: domains.json  solutions.json
data/access-control/: NORMALIZATION_AUDIT_REPORT.md
data/access-control/schemas/: ACLEntry.json  AccessAuditLog.json  AccessContext.json  AccessControlSequence.json  AccessControlTransaction.json  AccessPolicy.json  AccessRequest.json  ApprovalDecision.json  DataFilter.json  DelegatedPermission.json  FieldRestriction.json  Permission.json  PermissionAttribute.json  PermissionCondition.json  PermissionConditionLink.json  PermissionDependency.json  PolicyObligation.json  PolicyRule.json  PolicySet.json  PrincipalTrust.json  ResourcePermission.json  ResourceTag.json  Role.json  RolePermission.json  SecurityPrincipal.json  UserGroup.json  UserRole.json  (+3 more)
data/user-management/: NORMALIZATION_AUDIT_REPORT.md
mcp_project/: .dockerignore  Dockerfile  README.md  pyproject.toml
mcp_project/src/mcp_project/: __main__.py  http_app.py  server.py
messages/: en.json  es.json  fr.json
src/: i18n.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BackButton.tsx  LanguageSwitcher.tsx  PropertyTable.tsx  SchemaCard.tsx  SchemaGrid.tsx  SchemaSearch.tsx  SchemaSidebar.tsx  SolutionLayoutClient.tsx  ThemeToggle.tsx
src/lib/: rocketschema-validator.json  schemas.ts
src/types/: category.ts  schema.ts
(+197 files in other folders)
