[project]
name = "mcp-project"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.21.1",]
[[project.authors]]
name = "Yanis Cherfa"
email = "private@email.com"

[build-system]
requires = [ "uv_build>=0.9.9,<0.10.0",]
build-backend = "uv_build"

[project.scripts]
mcp-project = "mcp_project:main"
